<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialSAU</string>
    <string name="action_settings">Settings</string>
    
	<string name="sign_in">Sign in</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="comment">\'หมายเหตุ\' Android App เป็นส่วนขยายของเว็บไซต์ SocialSAU</string>
	
	<string name="tutorial_library">Tutorial Library</string>
	<string name="tutorial">Tutorial</string>
	<string name="chapter">Chapter</string>
	<string name="create">Create</string>
	<string name="update">Update</string>
	<string name="detail">Detail</string>
	<string name="user_update">User Update</string>
	
	<string name="video">Video</string>
	<string name="video_not_found">Video not found</string>
	
</resources>