<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" 
        android:layout_margin="10dp"
        android:padding="10dp" 
        android:background="#E2E2E2">
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            style="@style/TextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tutorial" />

        <TextView
            android:id="@+id/lb_tutorial_header"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tutorial" />
        
    </LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal" >
        <TextView
            style="@style/TextView"
            android:layout_width="100dp"
            android:text="@string/update" />
        <TextView
            android:id="@+id/lb_tutorial_update"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal" >
        <TextView
            style="@style/TextView"
            android:layout_width="100dp"
            android:text="@string/user_update" />
        <TextView
            android:id="@+id/lb_tutorial_user_update"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_update" />
    </LinearLayout>
    
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bg_video"
        android:layout_width="match_parent"
        android:layout_height="50dp" 
        android:gravity="center"
        android:layout_marginLeft="10dp" 
        android:layout_marginRight="10dp" 
        android:background="#E2E2E2">
        
        <TextView
	        android:id="@+id/lb_video"
	        style="@style/TextView"
	        android:text="@string/video_not_found"
	        android:layout_width="wrap_content" />

    	<ImageView
	        android:id="@+id/img_video"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_action_switch_video" 
	        android:layout_margin="10dp"/>
        
    </LinearLayout>
    
    
	<ListView
	    android:id="@+id/list_chapter"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp" 
	    android:background="@drawable/border_noradius" >
	</ListView>
    
</LinearLayout>
